Fix spacing

--- a/app/assets/stylesheets/search.scss
+++ b/app/assets/stylesheets/search.scss
@@ -14,4 +14,8 @@
       }
     }
   }
+
+  .org-type-oval {
+    margin-left: 0;
+  }
 }
